gerror: Add special case marshaling for boxing GErrors

Transfer gtype from introspection GError class to Python GError implementation.
Expose the PyGError pointer as an extern so other C files can pick this up.
Add custom to/from GValue marshalers for GError.
Add tests for both complete and incomplete (no boxed pointer held).

https://bugzilla.gnome.org/show_bug.cgi?id=761592